<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.HomepageFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/ivNotification"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/seach_clip">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/search_hint"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/bell_clip"
        app:layout_constraintBottom_toBottomOf="@+id/cvSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cvSearch" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvSearch">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:elevation="2dp"
                android:overScrollMode="never"
                android:scrollbarSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabContentStart="32dp"
                app:tabIndicatorColor="@color/orange"
                app:tabIndicatorHeight="3dp"
                app:tabMode="auto"
                app:tabPaddingStart="12dp"
                app:tabSelectedTextColor="@color/orange"
                app:tabTextColor="@color/bottomBarItemGrey">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:rotationX="0"
                    android:text="@string/all_cats" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMarket"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toStartOf="@+id/cvFood"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tablayout">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hizlimarket" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFood"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvMarket"
                app:layout_constraintEnd_toStartOf="@+id/cvSecondhand"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cvMarket"
                app:layout_constraintTop_toTopOf="@+id/cvMarket">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/yemek" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSecondhand"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvFood"
                app:layout_constraintEnd_toStartOf="@+id/cvCategories"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cvFood"
                app:layout_constraintTop_toTopOf="@+id/cvFood">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dolap" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategories"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvSecondhand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvSecondhand"
                app:layout_constraintTop_toTopOf="@+id/cvSecondhand">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/kateg" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/market"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/cvMarket"
                app:layout_constraintStart_toStartOf="@+id/cvMarket"
                app:layout_constraintTop_toBottomOf="@+id/cvMarket" />

            <TextView
                android:id="@+id/tvFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/food"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/cvFood"
                app:layout_constraintStart_toStartOf="@+id/cvFood"
                app:layout_constraintTop_toBottomOf="@+id/cvFood" />

            <TextView
                android:id="@+id/tvSecondhand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/secondhand"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/cvSecondhand"
                app:layout_constraintStart_toStartOf="@+id/cvSecondhand"
                app:layout_constraintTop_toBottomOf="@+id/cvSecondhand" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/categories"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/cvCategories"
                app:layout_constraintStart_toStartOf="@+id/cvCategories"
                app:layout_constraintTop_toBottomOf="@+id/cvCategories" />

            <ImageView
                android:id="@+id/ivForYou"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/sana"
                app:layout_constraintEnd_toStartOf="@+id/ivDiscount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMarket" />

            <ImageView
                android:id="@+id/ivDiscount"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/indirim"
                app:layout_constraintBottom_toBottomOf="@+id/ivForYou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivForYou"
                app:layout_constraintTop_toTopOf="@+id/ivForYou" />

            <TextView
                android:id="@+id/tvItemsForYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/items_for_you"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivForYou" />

            <TextView
                android:id="@+id/tvAllItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/all_items"
                android:textColor="@color/orange"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvItemsForYou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvItemsForYou" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemsForYou" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>